--- a/lib/package.json
+++ b/lib/package.json
@@ -32,5 +32,9 @@
   },
   "devDependencies": {
     "typescript": "^5.3.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zitadel/zitadel-react.git"
   }
 }
