chore: rm react scripts

--- a/package.json
+++ b/package.json
@@ -11,19 +11,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@zitadel/react": "link:./lib",
+    "oidc-client-ts": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "oidc-client-ts": "^2.4.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "web-vitals": "^2.1.0"
   },
   "eslintConfig": {
     "extends": [
