--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@zitadel/react": "link:./lib",
+    "bootstrap": "^5.3.8",
+    "oidc-client-ts": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "oidc-client-ts": "^2.4.0"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
